<resources>
    <string name="app_name">CyberoamClient</string>
    <string name="enrollment">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="tagline">A new experience to log into cyberoam</string>
    <string name="username_error">Enrollment field cannot be empty</string>
    <string name="password_error">Password field cannot be empty</string>
    <string name="data_exceed">Data Transfer exceed</string>
    <string name="maximum_login_limit">Maximum login limit</string>
    <string name="periodic_time_over">Periodic time over</string>
    <string name="wrong_password_username">The system could not log you on. Make sure your password is correct or Check Caps Lock Status</string>
    <string name="locked_error">Login failed. Your AD Server account is locked</string>
    <string name="login_success">You have successfully logged into JIIT Internet Server</string>
    <string name="account_locked">Login failed. Your AD Server account is locked</string>
    <string name="loggin_in">Logging you in...</string>
    <string name="total_data_used">Total data used</string>
    <string name="saved_accounts">Saved Accounts</string>
    <string-array name="navigation_options">
        <item>Saved Accounts</item>
        <item>Activity Log</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
    <string name="new_account">Add New Account</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="not_allowed_to_login">You are not allowed to login at this time</string>
    <string name="cyberoam_unreachable">Cannot reach cyberoam</string>
    <string name="version">Version 0.9.0 (S)</string>
    <string name="check_wifi">Please check if you are connected to a WiFi network</string>
    <string name="select_account">Select Account</string>
    <string name="alert">Alert!</string>
    <string name="beta_message">You are using a beta version of this app. The app is still under development. If you encounter any bugs or crashes it is highly appreciated to notify the developer for the same.</string>
    <string name="welcome_message">Thank you for downloading Cyberoam Client. We hope you enjoy using this app. If you encounter any bugs or crashes it is highly appreciated to notify the developer for the same.</string>
    <string name="settings">Settings</string>
    <string name="ip_address">IP Address</string>
    <string name="general">General</string>
    <string name="port">Port</string>
    <string name="you_have_been_logged_out">You have been logged out of cyberoam</string>
    <string name="about_text">Cyberoam Client is an unofficial Android client for cyberoam. Not only just it provides the basic functionality of login/logout,
    but features like save multiple accounts, session data tracking, activity log, automatic account validation check and much more.</string>
    <string name="thetechnocafe">TheTechnoCafe</string>
    <string name="about">About</string>
    <string name="no_saved_accounts">You don\'t have any saved accounts</string>
    <string name="notifications">Notifications</string>
    <string name="check_accounts">Check Accounts Validity</string>
    <string name="validating_accounts">Validating Accounts...</string>
    <string name="valid_account">Valid Account</string>
    <string name="not_valid_account">Wrong Credentials</string>
    <string name="logout">Logout</string>
    <string name="mb">MB</string>
    <string name="data_session_consumed">Data consumed this session</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="logged_in_at">Logged in at</string>
    <string name="duration">Duration</string>
    <string name="data_consumed">Data consumed</string>
    <string name="activity_log">Activity Log</string>
    <string name="total_logs">%1$s Total Logs</string>
    <string name="clear_logs">Clear all logs</string>
    <string name="activity_log_not_enabled">Activity Log is turned off. Turn it on from Settings</string>
    <string name="empty_activity_log">No logs found</string>
    <string name="wifi_strength">WiFi Strength</string>
    <string name="data_exceeded">Your data transfer has been exceeded, Please contact the administrator</string>
    <string name="total_logged_in_time">Total logged in duration</string>
    <string name="summary_total_times_logged_in">Times logged in</string>
    <string name="info">Info</string>
    <string name="total_data_used_today">Total Data Used Today</string>
    <string name="summary">Summary</string>
    <string name="mins">Mins</string>
    <string name="stats">Stats</string>
    <string name="summary_total_data_used">Total data used (MB)</string>
    <string name="summary_logged_in_duration">Total logged in duration (Mins)</string>
    <string name="enrollment_used">Username ID\'s used</string>
    <string name="data_used_today">Data used Today</string>
    <string name="logged_in_time_today">Logged in time Today</string>
    <string name="wifi_stats">WiFi Stats</string>
    <string name="stats_for_this_id">Stats for this ID</string>
    <string name="wifi_name">Network Name</string>
    <string name="update_account">Update account details</string>
    <string name="save">Save</string>
    <string name="continuous_login">Continuous Login</string>
    <string name="continuous_login_enabled">Continuous login is enabled</string>
    <string name="no_accounts_found">No saved accounts found. Please save one or more accounts to use continuous login.</string>
    <string name="config">Configuration</string>
    <string name="wifi_auto_login">Auto Login on Wifi</string>
    <string name="auto_wifi_logged_in">Logged into cyerboam with %1$s</string>
    <string name="logged_into_cyerbaom">Successfully logged in</string>
    <string name="no_saved_accounts_found">No saved accounts found</string>
    <string name="save_accounts_continuous_login">Save accounts to use continuous login</string>
    <string name="unable_to_login_saved_accounts">Unable to login with saved accounts</string>
    <string name="data_not_accurate">(Data calculations might not match the actual consumption)</string>
    <string name="all_logs_cleared">All Logs cleared successfully</string>
    <string name="change_theme_color">Change Theme Color</string>
    <string name="theme">Theme</string>
    <string name="pick_color">Pick Color</string>
</resources>
