<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:focusableInTouchMode="true"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:text="@string/new_account"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/enrollment_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/enrollment"
        android:inputType="number"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/cancel"
            android:clickable="true"
            android:padding="8dp"
            android:textSize="16sp"
            android:foreground="@drawable/ripple"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add"
            android:clickable="true"
            android:padding="8dp"
            android:textSize="16sp"
            android:foreground="@drawable/ripple"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>