<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="16dp"
        android:text="@string/ip_address"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <EditText
        android:layout_margin="16dp"
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/cancel"
            android:clickable="true"
            android:padding="8dp"
            android:textSize="16sp"
            android:foreground="@drawable/ripple"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/save"
            android:clickable="true"
            android:padding="8dp"
            android:textSize="16sp"
            android:foreground="@drawable/ripple"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>